--- a/ecommerce/src/main/resources/config/application-dev.yml
+++ b/ecommerce/src/main/resources/config/application-dev.yml
@@ -1,10 +1,22 @@
 spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5433/ecommerce
+    username: postgres
+    password: MDPPONico31*
+  jpa:
+    hibernate.ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
   security:
     user:
       password: nopassword
   main:
     allow-bean-definition-overriding: true
+    allow-circular-references: true
 
 server:
   servlet:
-    context-path: /vendor
+    context-path: /responsable
